# laurn

./: .gitignore  .laurnrc  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  default.nix  laurn.nix  shell.nix
.github/workflows/: ci.yml
crates/liblaurn/: Cargo.toml
crates/liblaurn/src/: build.rs  config.rs  container.rs  lib.rs  run.rs  strategy.rs  utils.rs
nix/: default.nix  sources.json
src/: build.rs  config.rs  main.rs  run.rs  strategy.rs
tests/: basic.rs
tests/basic/: default.nix  laurn.nix
tests/basic/src/: start.sh
