[workspace]

members = [
    "crates/dot",
]

[package]
name = "laurn"
version = "0.1.0"
authors = ["Arthur Gautier <baloo@superbaloo.net>"]
edition = "2018"

default-run = "laurn"

[[bin]]
name = "laurn"
test = true

[dependencies]
clap = "2.33.0"
nix = "0.18.0"

tempfile = "3.1.0"
nom = "5.1.1"
home = "0.5.3"
toml = "0.5.6"

serde_derive = "1.0.110"
serde = "1.0.110"
