[package]
name = "liblaurn"
version = "0.1.0"
authors = ["Arthur Gautier <baloo@superbaloo.net>"]
edition = "2018"
workspace = "../../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.17.0"
tempfile = "3.1.0"
nom = "5.1.1"
home = "0.5.3"
toml = "0.5.6"

serde_derive = "1.0.110"
serde = "1.0.110"
